--- a/webMovieApp/users/templates/users/registerationPage.html
+++ b/webMovieApp/users/templates/users/registerationPage.html
@@ -29,11 +29,11 @@
 
     </style>
   </head>
-  <body style="background-color: black;">
+  <body style="background-color: black;" onload="initialize()">
 
 
 {% comment %} header section starts {% endcomment %}
-<div class="container">
+<div class="container" >
    
   <div class="row justify-content-center"> 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -135,7 +135,7 @@
           <div class="col-md-4 mb-3">
           </div> 
 
-            <form class="needs-validation" novalidate>
+            {% comment %} <form class="needs-validation" novalidate> {% endcomment %}
                 <div class="row">
                   <div class="col-md-4 mb-3">
                     <label for="validationCustom01" >First name</label>
@@ -143,7 +143,7 @@
                     <div class="valid-feedback">
                       Looks good!
                     </div>
-                    <div class="invalid-feedback">
+                    <div class="01invalid-feedback text-danger fw-bold fs-3">
                       Please choose a first Name
                     </div>
                   </div>
@@ -153,7 +153,7 @@
                     <div class="valid-feedback">
                       Looks good!
                     </div>
-                    <div class="invalid-feedback">
+                    <div class="02invalid-feedback text-danger fw-bold fs-3">
                       Please choose a Last Name
                     </div>
                   </div>
@@ -166,7 +166,7 @@
                         <span class="input-group-text" id="inputGroupPrepend">@</span>
                       </div>
                       <input type="text" class="form-control" id="validationCustomUsername" placeholder="Username" aria-describedby="inputGroupPrepend" required>
-                      <div class="invalid-feedback">
+                      <div class="03invalid-feedback text-danger fw-bold fs-3">
                         Please choose a username.
                       </div>
                     </div>
@@ -177,7 +177,7 @@
                   <div class="col-md-3 mb-3">
                     <label for="validationCustom10">Password</label>
                     <input type="text" class="form-control" id="validationCustom10" placeholder="Chooese a strong password !! " required>
-                    <div class="invalid-feedback">
+                    <div class="10invalid-feedback text-danger fw-bold fs-3">
                       Please provide a valid Password.
                     </div>
                     </div> 
@@ -186,7 +186,7 @@
                   <div class="col-md-3 mb-3">
                     <label for="validationCustom06">Age</label>
                     <input type="text" class="form-control" id="validationCustom06" placeholder="Age" required>
-                    <div class="invalid-feedback">
+                    <div class="06invalid-feedback text-danger fw-bold fs-3">
                       Please provide a valid Age.
                     </div>
                   </div>
@@ -199,7 +199,7 @@
                   <div class="col-md-3 mb-3">
                     <label for="validationCustom08">Genre</label>
                     <input type="text" class="form-control" id="validationCustom08" placeholder="Action , War , Rommance" required>
-                    <div class="invalid-feedback">
+                    <div class="08invalid-feedback text-danger fw-bold fs-3">
                       Please provide a valid Genre.
                     </div>
                   </div>
@@ -209,7 +209,7 @@
                   <div class="col-md-3 mb-3">
                     <label for="validationCustom09">Content Type</label>
                     <input type="text" class="form-control" id="validationCustom09" placeholder="OTT/Movies/Podcast" required>
-                    <div class="invalid-feedback">
+                    <div class="09invalid-feedback text-danger fw-bold fs-3">
                       Please provide a valid Content Type.
                     </div>
                   </div>
@@ -218,21 +218,21 @@
 
 
                 </div>
-                <div class="form-group">
+                {% comment %} <div class="form-group">
                   <div class="form-check">
                     <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
                     <label class="form-check-label" for="invalidCheck">
                       Agree to terms and conditions
                     </label>
-                    <div class="invalid-feedback">
+                    <div class="checkbox-invalid-feedback">
                       You must agree before submitting.
                     </div>
                   </div>
-                </div>
+                </div> {% endcomment %}
 
 
                 <div class="col-lg-12 text-center"  data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                  <button class="btn btn-primary " type="submit">Submit form</button>
+                  <button class="btn btn-primary " onclick="sendtoDB()" type="submit">Submit form</button>
                 </div>
               </form>
               
@@ -263,7 +263,39 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>      
-  <script>
+ 
+    <script>
+      {% comment %} var i = (function() {
+        'use strict';
+       i = window.addEventListener('load', function() {
+          // Fetch all the forms we want to apply custom Bootstrap validation styles to
+          var forms = document.getElementsByClassName('needs-validation');
+          // Loop over them and prevent submission
+          var validation = Array.prototype.filter.call(forms, function(form) {
+            form.addEventListener('submit', function(event) {
+              if (form.checkValidity() === false) {
+                event.preventDefault();
+                event.stopPropagation();
+              }
+    
+              form.classList.add('was-validated');
+              
+    
+            }, false);
+          });
+          console.log("validation Result "+validation)
+
+
+
+
+        }, false);
+      })(); {% endcomment %}
+
+    
+    </script>      
+
+
+    <script>
     function logout(){
             document.cookie = "csrftoken=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
             window.location.href = "/users/loginPage"
