--- a/webMovieApp/searchingytvid/templates/searchingytvid/home.html
+++ b/webMovieApp/searchingytvid/templates/searchingytvid/home.html
@@ -161,8 +161,8 @@
                           <p class="card-text">{{vid.title}}</p>
                           <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                              <a type="button" href="${vid.url }"
-                               class="btn btn-md btn-outline-danger">Watch on Youtube </a>
+                              <a type="button" href={{ vid.url }}
+                               class="btn btn-md btn-outline-danger">Watch on Youtube  </a>
                             </div>
                             <small class="text-muted">{{ vid.totaltimeinMinutes}} mins</small>
                           </div>
